--- a/bootstrap.html
+++ b/bootstrap.html
@@ -54,6 +54,60 @@
                 <p class="text-capitalize">Capitalized text.</p>
             </div>
         </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <form class="form-horizontal">
+                    <div class="form-group has-warning has-feedback">
+                        <label class="col-xs-12 col-sm-6 col-md-6 col-lg-6 control-label" for="fullname">Full Name:</label>
+                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                        <p class="form-control-static">Madhav Choudhary</p>
+                        </div>
+                    </div>
+                    <div class="form-group has-warning has-feedback">
+                        <label class="col-xs-12 col-sm-6 col-md-6 col-lg-6 control-label" for="fullname">Full Name:</label>
+                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                            <input class="form-control" type="text" id="fullname" placeholder="Full Name">
+                            <span class="glyphicon glyphicon-ok form-control-feedback" aria-hidden="true"></span>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-xs-12 col-sm-6 col-md-6 col-lg-6 control-label" for="subject">Subject:</label>
+                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                            <input class="form-control" type="text" id="subject" placeholder="Subject">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-xs-12 col-sm-6 col-md-6 col-lg-6 control-label" for="phone">Phone:</label>
+                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                            <input class="form-control" type="tel" id="phone" placeholder="Phone">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-xs-12 col-sm-6 col-md-6 col-lg-6 control-label" for="phone">Phone:</label>
+                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                            <input class="form-control" type="tel" id="phone" placeholder="Phone">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="input-group">
+                            <span class="input-group-addon">Amount</span>
+                                <input class="form-control" type="email" id="email" placeholder="Email">
+                            <span class="input-group-addon">$</span>
+                        </div>
+                    </div>
+                      <div class="radio-inline">
+                            <label><input type="radio" name="gender">Male</label>
+                        </div>
+                        <div class="radio-inline">
+                            <label><input type="radio" name="gender">Female</label>
+                        </div>
+                        <div class="clearfix"></div>
+                        <button type="button" class="btn btn-default pull-right">
+                            <span class="glyphicon glyphicon-print" aria-hidden="true"></span>
+                        Submit</button>
+                </form>
+            </div>
+        </div>
     </div>
     <script href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
